@@ -221,6 +221,8 @@ See the end of the file for license conditions.
   - bug #65862: Output directory ignored when Statistics is called with
     the '--ontile' option.
 
+  - bug #65935: Arithmetic crashes with constants like speed of light.
+
 
 
 
